The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:


Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume)
Date: 2006/12/08 09:50:00 CST
Description:

Added code to CM's "standard shell tool" implementation which
causes it to tolerate (with a warning) the situation where the shell
command fails (e.g., due to the shell command's non-existence)
as long as all target files exist.

This makes it possible to, e.g., build ml-yacc from sources even if
svn checkout messed up the time stamps on files in such a way that
yacc.grm is younger than yacc.grm.sml or yacc.grm.sig.  (Ml-yacc would
be needed to re-process yacc.grm, but obviously it might not yet be
available at that time.)

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2006/12/06 12:06:00 CST
Description:

Fixed the types of recvVecFrom, recvVecFrom', recvVecFromNB, and
recvVecFromNB' in the SOCKET signature.  This error is actually
in the SML Basis specification too.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/12/05 22:40:00 CST
Description:

CM now reports undefined anchors as errors and aborts execution
rather than silently pressing on using bogus values.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/11/29 10:00:00 CST
Description:

Use Say.vsay for printing the "[autoloading]" message, so
#set CM.Control.verbose false (or -Ccm.verbose=false) can be used
to suppress them.

----------------------------------------------------------------------