@@ -14,6 +14,17 @@ Tag: cvs-tag-for-this-change
 Description:
 
 ----------------------------------------------------------------------
+Name: John Reppy (http://cs.uchicago.edu/~jhr)
+Date: 2006/14/06 09:50:00 CST
+Description:
+
+Fixed the code in runtime/c-libs/posix-tty/{tcgetattr,tcsetattr}.c to
+get the c_cc termios data copied correctly.  Also moved the allocation
+of the string to avoid problems if it caused a GC.
+
+Thanks to Timothy Bourke for the bug report and fix.
+
+----------------------------------------------------------------------
 Name: Matthias Blume (http://www.tti-c.org/blume)
 Date: 2006/12/08 09:50:00 CST
 Description:
